feat: implement initial candite login page by simple controller

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.mgckdev</groupId>
 	<artifactId>front_gestao_vagas</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>front_gestao_vagas</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
